<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.programacion.robertomtz.deportesunam.LoginActivity">

    <Button
        android:id="@+id/login_btn_ingresar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/iniciar_sesion"
        android:textSize="22sp"
        android:layout_marginTop="26dp"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_loginbtn_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:layout_above="@+id/login_btn_ingresar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />

    <EditText
        android:id="@+id/login_et_correo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/login_et_password"
        android:layout_alignStart="@+id/login_et_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView3"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/login_loginbtn_fb"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
