<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    tools:showIn="@layout/activity_inicio"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_loginbtn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/login_et_correo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/correo"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_marginBottom="80dp" />

        <Button
            android:id="@+id/login_btn_ingresar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="35dp" />

    </LinearLayout>

</ScrollView>