<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_info_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.programacion.robertomtz.deportesunam.InfoEventoActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info_nombre"
                    android:layout_width="220dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="start"
                    android:text="Nombre" />

                <ImageView
                    android:id="@+id/info_iv_yt_logo"
                    android:src="@drawable/youtube_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>


            <ImageView
                android:id="@+id/info_iv_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/info_tv_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/info_tv_publico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publico"
                android:textSize="15sp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/info_tv_dateunix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_unix"
                android:textSize="15sp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/info_tv_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lugar"
                android:textSize="15sp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/info_tv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="25dp"/>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/marker_maps" />

</RelativeLayout>